--- a/src/App.css
+++ b/src/App.css
@@ -83,15 +83,6 @@ html, body {
   padding: 20px;
 }
 
-.webcam-container {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 200px; /* Adjust as needed */
-  height: 150px; /* Adjust as needed */
-  z-index: 10;
-}
-
 .media-player-container {
   width: 60%; /* Adjust as needed */
   height: auto; /* Adjust as needed */
@@ -189,4 +180,47 @@ html, body {
 
 #webcam-test {
   border: 15px solid  black;
+  height: 60vh;
+}
+
+.gazeTable {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.gazeTableHead {
+  background-color: #f2f2f2;
+}
+
+.gazeTableTh, .gazeTableTd {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.gazeTableTr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.gazeTableTr:hover {
+  background-color: #e0e0e0;
+}
+
+/* Container div for the video player */
+.video-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100%) */
+  max-height: 60vh;
+}
+
+/* Style the video element itself */
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 60vh;
 }
