--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,8 @@ html, body {
 .video-container {
   position: relative;
   overflow: hidden;
-  padding-top: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100%) */
+  /* padding-top: 56.25%; 16:9 aspect ratio (9 / 16 * 100%) - SEEMS TO BE TOO LARGE */
+  padding-top: 40%;  
   max-height: 60vh;
 }
 
@@ -222,7 +223,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  max-height: 60vh;
+  /* max-height: 60vh; */
 }
 
 #webgazerVideoContainer {
