--- a/src/App.css
+++ b/src/App.css
@@ -229,3 +229,12 @@ html, body {
 #webgazerVideoContainer {
   z-index: -1000;
 }
+
+
+.back-button {
+  position: absolute;
+  top: 10px;   /* Adjust these values as needed */
+  left: 10px;
+  z-index: 100;
+  /* Add more styling here if needed */
+}
